Added Javadoc and renamed visible binding name as recommended during code review. Several modification to use Java8 features.
Signed-off-by: Sebastian Prehn <sebastian.prehn@gmx.de> (github: sprehn)